<resources>
    <string name="app_name">Tictactoe</string>
    <string name="congratulations">Congratulations!</string>
    <string name="we_have_a_winner">We have a winner</string>
    <string name="new_game">New game</string>
    <string name="its_a_draw">It\'s a draw!</string>
    <string name="another_game">Another game?</string>
    <string name="welcome">Welcome!</string>
    <string name="player_o_name">Player O name</string>
    <string name="player_x_name">Player X name</string>
    <string name="player_o">Player O:</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="player_x">Player X:</string>
    <string name="start_game">Start game</string>
    <string name="player_o_turn">Player O\'s turn</string>
    <string name="turn_for_player_o">Turn for player O</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="light_mode">Light Mode</string>
    <string name="night_node">Night Mode</string>
    <string name="pvp">PVP</string>
    <string name="versus_ai">Versus AI</string>
    <string name="nice_try">Nice Try!</string>
    <string name="better_luck_next_time">Better luck next time</string>
    <string name="you_lose">You Lose!</string>
    <string name="theme">Theme</string>
    <string name="razzmatazz">Razzmatazz</string>
    <string name="dark_orchid">Dark Orchid</string>
    <string name="rose_red">Rose Red</string>
    <string name="grape">Grape</string>
    <string name="persian_blue">Persian Blue</string>
    <string name="lapis_lazuli">Lapis Lazuli</string>
    <string name="carolina_blue">Carolina Blue</string>
    <string name="medium_turquoise">Medium Turquoise</string>
    <string name="emerald">Emerald</string>
    <string name="theme_preference_key">theme_preference_key</string>
    <string name="application_theme">application_theme</string>
    <string name="rules">Rules</string>
</resources>